--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-
-*.db
-.vs/BardzoSiszarpowaGra/v16/Browse.VC.opendb
+.vs/*
+v16
+/BardzoSiszarpowaGra/bin
+/BardzoSiszarpowaGra/obj
+.vs/BardzoSiszarpowaGra/v16/.suo
+.vs/BardzoSiszarpowaGra/v16/Browse.VC.db-shm
+BardzoSiszarpowaGra/obj/Debug/netcoreapp3.1/BardzoSiszarpowaGra.csprojAssemblyReference.cache
